<?xml version="1.0"?>
<package format="2">
  <name>precaster_rps800</name>
  <version>0.0.0</version>
  <description>Precaster rangeFinder publisher and subscriber</description>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>serial</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
