<?xml version="1.0"?>
<package>
  <name>precaster_rangefinder_rps800</name>
  <version>0.1.1</version>
  <description>Precaster rangefinder rps800 ROS driver</description>

  <maintainer email="alex@erlerobotics.com">Alejandro Hernandez</maintainer>

  <license>BSD</license>

  <author email="alex@erlerobotics.com">Alejandro Hernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
</package>
